# EurekaClaw

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  README_zh.md  docker-compose.yml  docker-entrypoint.sh  install.sh  install_win.ps1  pyproject.toml
docs/: README.md
docs/superpowers/plans/: 2026-04-15-historical-session-qa.md  2026-04-15-paper-qa-gate-ui.md  2026-04-15-paper-qa-gate.md  2026-04-17-paper-rewrite-unification.md  2026-04-17-paper-session-redesign.md  2026-04-17-paper-tab-unified-ready-state.md  2026-04-19-ui-polish-sidebar-gate-qa-scroll.md
docs/superpowers/specs/: 2026-04-15-historical-session-qa-design.md  2026-04-15-paper-qa-gate-design.md  2026-04-15-paper-qa-gate-ui-design.md  2026-04-16-session-header-redesign.md  2026-04-17-paper-rewrite-unification-design.md  2026-04-17-paper-session-redesign-design.md  2026-04-17-paper-tab-unified-ready-state-design.md
eurekaclaw/: ccproxy_manager.py  cli.py  codex_manager.py  config.py  console.py  main.py  onboard.py
eurekaclaw/agents/: base.py  session.py
eurekaclaw/agents/paper_qa/: agent.py
eurekaclaw/auth/: __init__.py  oauth.py  providers.py  token_store.py
eurekaclaw/knowledge_bus/: bus.py
eurekaclaw/llm/: base.py  factory.py  novita_adapter.py  openai_compat.py  openai_responses.py
eurekaclaw/orchestrator/: gate.py  meta_orchestrator.py  paper_qa_handler.py  session_loader.py
eurekaclaw/skills/: install.py  registry.py
eurekaclaw/tools/: latex_section.py  registry.py
eurekaclaw/ui/: constants.py  review_gate.py  server.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
tests/: test_gates.py
tests/unit/: test_clean_proof_text.py  test_codex_oauth.py  test_context_compaction.py  test_ensure_bus_activated.py  test_latex_section.py  test_paper_qa_agent.py  test_paper_qa_handler.py  test_paper_qa_history_disk.py  test_paper_version.py  test_rewrite_endpoint.py  test_rewrite_marker_constant.py  test_seed_skills_install.py  test_session_loader.py  test_skills_registry.py  test_sync_latex_to_disk.py
(+78 files in other folders)
