[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eurekaclaw"
version = "0.1.0"
description = "Multi-agent system for theoretical research — proof-heavy, formalism-rich, math-dense domains"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache 2.0" }
authors = [{ name = "EurekaClaw Contributors" }]

dependencies = [
    "anthropic>=0.34.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "networkx>=3.3",
    "click>=8.0",
    "rich>=13.0",
    "python-frontmatter>=1.1",
    "PyYAML>=6.0",
    "tenacity>=8.0",
    "numpy>=1.26",
    "arxiv>=2.1",
    "bibtexparser>=1.4",
    "sentence-transformers>=3.0",
    "requests>=2.31",
    "readchar>=4.0",
    "docling>=2.0",
]

[project.optional-dependencies]
# Semantic skill/memory retrieval via cosine similarity (falls back to tag/recency if absent)
embeddings = ["sentence-transformers>=3.0"]
# Sandboxed code execution via Docker (falls back to local subprocess if absent)
docker = ["docker>=7.0"]
# OpenAI-compatible backend (OpenRouter, vLLM, SGLang, LM Studio, Minimax…)
openai = ["openai>=1.30"]
# Claude Pro/Max via Claude Code OAuth tokens
oauth = ["ccproxy-api>=0.2.4"]
# OpenAI Codex via EurekaClaw built-in OAuth (eurekaclaw login --provider openai-codex)
codex = ["openai>=1.30"]
# Full-PDF extraction via Docling (arXiv PDF → theorem/lemma sections)
pdf = ["docling>=2.0"]
# Development & testing
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "mypy>=1.10",
]
# Install everything at once (except system-level Lean4/pdflatex)
all = [
    "eurekaclaw[embeddings,docker,openai,oauth,codex,pdf]",
]

[project.scripts]
eurekaclaw = "eurekaclaw.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["eurekaclaw"]
artifacts = ["eurekaclaw/ui/static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
